// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectField  1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <form
      class="sc-bdfBwQ czeLXL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bEnuwL"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 eMyfFh"
        >
          <div>
            <div
              class="StyledBox-sc-13pk1d4-0 dLXLoO FormField__FormFieldBox-m9hood-0 jGEMXj"
            >
              <label
                class="StyledText-sc-1sadyjn-0 drTEXR"
                for="country"
              >
                Country
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 gmReJc FormField__FormFieldContentBox-m9hood-1"
              >
                <button
                  aria-label="Open Drop"
                  class="StyledButton-sc-323bzc-0 hkpJCj Select__StyledSelectDropButton-sc-17idtfo-1 dYfCep"
                  id="country"
                  type="button"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 jmuHez"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 iAryDB"
                    >
                      <div
                        class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
                      >
                        <input
                          autocomplete="off"
                          class="StyledTextInput-sc-1x30a0s-0 nnMiQ Select__SelectTextInput-sc-17idtfo-0 bIurki"
                          id="country__input"
                          name="country"
                          readonly=""
                          tabindex="-1"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="StyledBox-sc-13pk1d4-0 eA-DBEo"
                      style="min-width: auto;"
                    >
                      <svg
                        aria-label="FormDown"
                        class="StyledIcon-ofa7kd-0 fuviCN"
                        viewBox="0 0 24 24"
                      >
                        <polyline
                          fill="none"
                          points="18 9 12 15 6 9"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 jsieLm"
            >
              <button
                class="StyledButton-sc-323bzc-0 iZFCLM"
                type="submit"
              >
                Submit
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SelectField  2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <form
      class="sc-bdfBwQ czeLXL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bEnuwL"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 eMyfFh"
        >
          <div>
            <button
              aria-label="Open Drop"
              class="StyledButton-sc-323bzc-0 ebqXLG Select__StyledSelectDropButton-sc-17idtfo-1 iGEQF"
              id="country"
              type="button"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 jmuHez"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 iAryDB"
                >
                  <div
                    class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
                  >
                    <input
                      autocomplete="off"
                      class="StyledTextInput-sc-1x30a0s-0 nnMiQ Select__SelectTextInput-sc-17idtfo-0 bIurki"
                      id="country__input"
                      label="Country"
                      name="country"
                      readonly=""
                      tabindex="-1"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 eA-DBEo"
                  style="min-width: auto;"
                >
                  <svg
                    aria-label="FormDown"
                    class="StyledIcon-ofa7kd-0 fuviCN"
                    viewBox="0 0 24 24"
                  >
                    <polyline
                      fill="none"
                      points="18 9 12 15 6 9"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </button>
            <div
              class="StyledBox-sc-13pk1d4-0 jsieLm"
            >
              <button
                class="StyledButton-sc-323bzc-0 iZFCLM"
                type="submit"
              >
                Submit
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SelectField  3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <form
      class="sc-bdfBwQ czeLXL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bEnuwL"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 eMyfFh"
        >
          <div>
            <div
              class="StyledBox-sc-13pk1d4-0 dLXLoO FormField__FormFieldBox-m9hood-0 jGEMXj"
            >
              <label
                class="StyledText-sc-1sadyjn-0 drTEXR"
                for="country"
              >
                Country
              </label>
              <div
                class="StyledBox-sc-13pk1d4-0 gmReJc FormField__FormFieldContentBox-m9hood-1"
              >
                <button
                  aria-label="Open Drop"
                  class="StyledButton-sc-323bzc-0 hkpJCj Select__StyledSelectDropButton-sc-17idtfo-1 dYfCep"
                  id="country"
                  type="button"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 jmuHez"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 iAryDB"
                    >
                      <div
                        class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
                      >
                        <input
                          autocomplete="off"
                          class="StyledTextInput-sc-1x30a0s-0 nnMiQ Select__SelectTextInput-sc-17idtfo-0 bIurki"
                          id="country__input"
                          name="country"
                          readonly=""
                          tabindex="-1"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="StyledBox-sc-13pk1d4-0 eA-DBEo"
                      style="min-width: auto;"
                    >
                      <svg
                        aria-label="FormDown"
                        class="StyledIcon-ofa7kd-0 fuviCN"
                        viewBox="0 0 24 24"
                      >
                        <polyline
                          fill="none"
                          points="18 9 12 15 6 9"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 jsieLm"
            >
              <button
                class="StyledButton-sc-323bzc-0 iZFCLM"
                type="submit"
              >
                Submit
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
